--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@redux-offline/redux-offline": "^2.3.2",
     "axios": "^0.18.0",
     "lodash": "^4.17.5",
     "material-ui": "^1.0.0-beta.36",
